Updating versions. Replacing Spark with Javalin. Removing Hibernate from gradle file. Minor refactoring of HTTP verbs. A few other refactorings.